css/style.css
/* Stylesheet for Project 01 */
body {
	letter-spacing: -0.25px;
	line-height: 1.8em;
	margin-top: 0px; 
	background-color: white; 
	font-size: 16px;
	margin-right: 0;
	margin-left: 0;
	margin-bottom: 0;
}

p {
	font-family: 'Open Sans', sans-serif;
}

a {
	text-decoration: none;
}

/*Container for Layout*/

.container {
	margin: 0 auto;
	width: 93%;
	max-width: 800px;
	display: grid;
}

.box {
	display: grid;
	grid-template-columns: repeat(1, 1fr);
	grid-template-rows: 1fr;
	grid-column-gap: 10px;
	grid-row-gap: 5px;
	height: auto;
	margin-bottom: 10px;
	margin-top: 4px;
	background-color: #f5f5f5;
	padding-left: 13px;
	padding-right: 13px;
	border-radius: 10px;
	padding-top: 130px;
}

/* Formatting for Banner & Navigation*/

.banner{
	background-color: white;
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	grid-template-rows: 1fr;
	padding-top: 10px;
	padding-bottom: 10px;
	border-bottom: 5px solid #f7d543;
	margin-bottom: 5px;
}

.banner h1 {
	margin-top: 0;
	padding-top: 15px;
	margin-left: 400px;
	font-size: 45px;
	color: #007373;
}

.banner {
	position: fixed;
	right: 0;
	left: 0;
	z-index: 999;
} /* For website navigation to stick as you scroll */

.menu ul {
	list-style-type: none;
	padding-left: 0; 
	display: flex;
	justify-content: space-around;
	max-width: 800px;
	margin-right: 400px;

}

.menu a{
	text-decoration: none;
	color: #004a4a;
	display: block;
	border-radius: 10px;
	padding-left: 15px;
	padding-right: 15px;
	padding-top: 6px;
	padding-bottom: 7px;
	font-size: 18px;
	font-weight: bold;
}

.menu a:hover {
	color: #e07b7b;
	background-color: #d1d1d1;
	transition: background-color 0.3s ease-in;

}

.menu a.is-current {
	color: #e07b7b;
	background-color: #d1d1d1;
	transition: background-color 0.1s ease-in;
}

/* Formatting for imgages */

.restrict {
	max-width: 380px;
	float: right;
	max-height: 380px;
	padding: 5px;
	border-radius: 8px;
}

.restrict1 {
	max-width: 380px;
	float: left;
	max-height: 380px;
	padding: 5px;
	border-radius: 8px;
	margin: 4px;
}

/* Formatting Headings */
h1 {
	font-family: 'Playfair Display', serif;
}

h2 {
	font-family: 'Playfair Display', serif;
	font-size: 55px;
	text-align: center;
	color: #e07b7b;
	margin-bottom: 30px;
	margin-top: 30px;
}

h3 {
	font-family: 'Playfair Display', serif;
	font-size: 30px;
	color: #008585;
}

h4 {
	font-family: 'Playfair Display', serif;
	font-size: 20px;
	color: #00a1a1;
}

/* Formatting for Footer*/

footer {
	background-color: #007373;
	text-align: center;
	padding-top: 10px;
}

footer div {
	margin-bottom: 0;
	margin-top: 0;
	color: #ffffff;
	height: 45px;
	max-height: 30px;
}

footer a {
	color: #f7d543;
	text-decoration: none; 
}

a:hover { color: #e07b7b; }


/* For index.html z-layout */


.firstRow{
    display: grid;
    grid-template-columns: 7fr 3fr;
    grid-auto-rows: minmax(50px,auto);
}

.secondL{
    display: grid;
    grid-template-columns: repeat(5, 1fr);
}

.secondRow{
    display: grid;
    grid-template-columns: 5fr 3fr;
    grid-auto-rows: 500px;
}


.parent {
	position: relative;
	top: 0;
	left: 0;
}

.image1 {
	position: relative;
	top: 0;
	left: 0;
	width: 300px;
	height: 300px;
	border-radius: 10px;
}
.image2 {
	position: absolute;
	top: 50px;
	left: 50px;
	width: 300px;
	height: 300px;
	border-radius: 10px;
}
.image3 {
	position: absolute;
	top: 100px;
	left: 100px;
	width: 300px;
	height: 300px;
	border-radius: 10px;
}
.image4 {
	position: absolute;
	top: 150px;
	left: 150px;
	width: 300px;
	height: 300px;
	border-radius: 10px;
}
.button{
	position: absolute;
	color: black;
	right:    10px;
	bottom:   10px;
	background-color: #1843bb8f;
	border-radius: 10px;
	padding-left: 15px;
	padding-right: 15px;
	padding-top: 6px;
	padding-bottom: 7px;
	font-size: 18px;
	font-weight: bold;
}
.formHere{
	font-size: 15px;
	margin: 10px;
	padding: 10px;
	margin-bottom: 50px;
	border-radius: 10px;
	position: relative;
	top: 0;
	left: 0;
	background-color: #004a4a83;
}

